plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'org.example'
version '1.0-SNAPSHOT'


mainClassName = 'com.sd.roguelike.MyApp'
applicationName = 'CatGame'
targetCompatibility = 11

def javafxModules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media' ]
run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', javafxModules.join(',')
        ]
    }
}

repositories {
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    jcenter()
}


javafx {
    version = "12"
    modules = javafxModules
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    compile 'no.tornado:tornadofx:2.0.0-SNAPSHOT'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
    testImplementation 'io.kotest:kotest-runner-junit5-jvm:4.0.5'
    testImplementation 'io.kotest:kotest-assertions-core-jvm:4.0.5'
    testImplementation 'io.kotest:kotest-property-jvm:4.0.5'
    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.61"
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
}

compileKotlin {
    kotlinOptions.jvmTarget = "11"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "11"
}